--- a/Internal CSS.html
+++ b/Internal CSS.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      background-color: linen;
+    }
+
+    h1 {
+      color: maroon;
+      margin-left: 40px;
+    }
+  </style>
 </head>
 <body>
 
