--- a/Inline CSS.html
+++ b/Inline CSS.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1 style="color:blue;text-align:center;">This is a heading</h1>
+<p style="color:red;">This is a paragraph.</p>
 </body>
 </html>
