--- a/HTML and CSS Comments.html
+++ b/HTML and CSS Comments.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p {
+      color: red; /* Set text color to red */
+    }
+  </style>
 </head>
 <body>
 
