--- a/HTML and CSS Comments.html
+++ b/HTML and CSS Comments.html
@@ -10,6 +10,11 @@
   </style>
 </head>
 <body>
+<h2>My Heading</h2>
 
+<!-- These paragraphs will be red -->
+<p>Hello World!</p>
+<p>This paragraph is styled with CSS.</p>
+<p>CSS comments are not shown in the output.</p>
 </body>
 </html>
