--- a/CSS Text Color.html
+++ b/CSS Text Color.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1 style="color:Tomato;">Hello World</h1>
+<p style="color:DodgerBlue;">Lorem ipsum...</p>
+<p style="color:MediumSeaGreen;">Ut wisi enim...</p>
 </body>
 </html>
