--- a/CSS Border Color.html
+++ b/CSS Border Color.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1 style="border:2px solid Tomato;">Hello World</h1>
+<h1 style="border:2px solid DodgerBlue;">Hello World</h1>
+<h1 style="border:2px solid Violet;">Hello World</h1>
 </body>
 </html>
