--- a/3 Digit HEX Value.html
+++ b/3 Digit HEX Value.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<style>
+  body {
+    background-color: #fc9; /* same as #ffcc99 */
+  }
 
+  h1 {
+    color: #f0f; /* same as #ff00ff */
+  }
+
+  p {
+    color: #b58; /* same as #bb5588 */
+  }
+</style>
 </body>
 </html>
