--- a/3 Digit HEX Value.html
+++ b/3 Digit HEX Value.html
@@ -18,5 +18,10 @@
     color: #b58; /* same as #bb5588 */
   }
 </style>
+
+
+<h1>CSS 3-digit Hex Code</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
