--- a/CSS background-color example.html
+++ b/CSS background-color example.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h1 {
+            background-color: green;
+        }
+
+        div {
+            background-color: lightblue;
+        }
+
+        p {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
 
