--- a/Transparent Boxes.html
+++ b/Transparent Boxes.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      background-color: green;
+    }
+
+    div.first {
+      opacity: 0.1;
+    }
+
+    div.second {
+      opacity: 0.3;
+    }
+
+    div.third {
+      opacity: 0.6;
+    }
+  </style>
 </head>
 <body>
 
