--- a/Transparent Boxes 2.html
+++ b/Transparent Boxes 2.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            background: rgb(0, 128, 0);
+        }
+
+        div.first {
+            background: rgba(0, 128, 0, 0.1);
+        }
+
+        div.second {
+            background: rgba(0, 128, 0, 0.3);
+        }
+
+        div.third {
+            background: rgba(0, 128, 0, 0.6);
+        }
+    </style>
 </head>
 <body>
 
