--- a/background-image.html
+++ b/background-image.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Hello World!</h1>
 
+<p>This page has an image as the background!</p>
 </body>
 </html>
