--- a/background-image.html
+++ b/background-image.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            background-image: url("paper.jpg");
+        }
+    </style>
 </head>
 <body>
 <h1>Hello World!</h1>
