--- a/background-image.html
+++ b/background-image.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <style>
         body {
-            background-image: url("paper.jpg");
+            background-image: url("IMAGE/paper.jpg");
         }
     </style>
 </head>
