--- a/background image for specific elements.html
+++ b/background image for specific elements.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Hello World!</h1>
+
+<p>This paragraph has an image as the background!</p>
 
 </body>
 </html>
