--- a/background image for specific elements.html
+++ b/background image for specific elements.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p {
+            background-image: url("IMAGE/paper.jpg");
+        }
+    </style>
 </head>
 <body>
 <h1>Hello World!</h1>
