--- a/CSS background-repeat.html
+++ b/CSS background-repeat.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            background-image: url("IMAGE/repeat.jpg");
+        }
+    </style>
 </head>
 <body>
 
