--- a/repeated only horizontally.html
+++ b/repeated only horizontally.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Hello World!</h1>
+<p>Here, a background image is repeated only horizontally!</p>
 </body>
 </html>
