--- a/repeated only horizontally.html
+++ b/repeated only horizontally.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      background-image: url("IMAGE/repeat.jpg");
+      background-repeat: repeat-x;
+    }
+  </style>
 </head>
 <body>
 <h1>Hello World!</h1>
