--- a/repeat only vertically.html
+++ b/repeat only vertically.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      background-image: url("IMAGE/repeat.jpg");
+      background-repeat: repeat-y;
+    }
+  </style>
 </head>
 <body>
 
