--- a/repeat only vertically.html
+++ b/repeat only vertically.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
-
+<h1>Hello World!</h1>
+<p>Here, a background image is repeated only horizontally!</p>
 </body>
 </html>
