--- a/background-repeat-no-repeat.html
+++ b/background-repeat-no-repeat.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      background-image: url("IMAGE/paper.jpg");
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
 <body>
 <h1>Hello World!</h1>
