--- a/CSS background-position.html
+++ b/CSS background-position.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Hello World!</h1>
+<p>Here, the background image is only shown once. In addition it is positioned away from the text.</p>
+<p>In this example we have also added a margin on the right side, so that the background image will not disturb the text.</p>
 </body>
 </html>
