--- a/CSS background-position.html
+++ b/CSS background-position.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      background-image: url("IMAGE/paper.jpg");
+      background-repeat: no-repeat;
+      background-position: right top;
+      margin-right: 200px;
+    }
+  </style>
 </head>
 <body>
 <h1>Hello World!</h1>
