--- a/CSS background-attachment.html
+++ b/CSS background-attachment.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            background-image: url("IMAGE/paper.jpg");
+            background-repeat: no-repeat;
+            background-position: right top;
+            margin-right: 200px;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
 <h1>The background-attachment Property</h1>
