--- a/scroll with the rest of the page.html
+++ b/scroll with the rest of the page.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            background-image: url("img_tree.png");
+            background-repeat: no-repeat;
+            background-position: right top;
+            margin-right: 200px;
+            background-attachment: scroll;
+        }
+    </style>,6,
 </head>
 <body>
 <h1>The background-attachment Property</h1>
