--- a/scroll with the rest of the page.html
+++ b/scroll with the rest of the page.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <style>
         body {
-            background-image: url("img_tree.png");
+            background-image: url("IMAGE/repeat.jpg");
             background-repeat: no-repeat;
             background-position: right top;
             margin-right: 200px;
