--- a/border-width Property.html
+++ b/border-width Property.html
@@ -3,6 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.one {
+      border-style: solid;
+      border-width: 5px;
+    }
+
+    p.two {
+      border-style: solid;
+      border-width: medium;
+    }
+
+    p.three {
+      border-style: dotted;
+      border-width: 2px;
+    }
+
+    p.four {
+      border-style: dotted;
+      border-width: thick;
+    }
+
+    p.five {
+      border-style: double;
+      border-width: 15px;
+    }
+
+    p.six {
+      border-style: double;
+      border-width: thick;
+    }
+  </style>
 </head>
 <body>
 
