--- a/Specific Side Widths.html
+++ b/Specific Side Widths.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p.one {
+            border-style: solid;
+            border-width: 5px 20px; /* 5px top and bottom, 20px on the sides */
+        }
+
+        p.two {
+            border-style: solid;
+            border-width: 20px 5px; /* 20px top and bottom, 5px on the sides */
+        }
+
+        p.three {
+            border-style: solid;
+            border-width: 25px 10px 4px 35px; /* 25px top, 10px right, 4px bottom and 35px left */
+        }
+    </style>
 </head>
 <body>
 <h2>The border-width Property</h2>
