--- a/border-color Property.html
+++ b/border-color Property.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p.one {
+            border-style: solid;
+            border-color: red;
+        }
+
+        p.two {
+            border-style: solid;
+            border-color: green;
+        }
+
+        p.three {
+            border-style: dotted;
+            border-color: blue;
+        }
+    </style>
 </head>
 <body>
 h2>The border-color Property</h2>
