--- a/Specific Side Colors.html
+++ b/Specific Side Colors.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The border-color Property</h2>
+<p>The border-color property can have from one to four values (for the top border, right border, bottom border, and the left border):</p>
+
+<p class="one">A solid multicolor border</p>
 
 </body>
 </html>
