--- a/Specific Side Colors.html
+++ b/Specific Side Colors.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.one {
+      border-style: solid;
+      border-color: red green blue yellow; /* red top, green right, blue bottom and yellow left */
+    }
+  </style>
 </head>
 <body>
 <h2>The border-color Property</h2>
