--- a/HEX Values border-color.html
+++ b/HEX Values border-color.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The border-color Property</h2>
+<p>The color of the border can also be specified using a hexadecimal value (HEX):</p>
 
+<p class="one">A solid red border</p>
+<p class="two">A solid blue border</p>
+<p class="three">A solid grey border</p>
 </body>
 </html>
