--- a/HEX Values border-color.html
+++ b/HEX Values border-color.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.one {
+      border-style: solid;
+      border-color: #ff0000; /* red */
+    }
+
+    p.two {
+      border-style: solid;
+      border-color: #0000ff; /* blue */
+    }
+
+    p.three {
+      border-style: solid;
+      border-color: #bbbbbb; /* grey */
+    }
+  </style>
 </head>
 <body>
 <h2>The border-color Property</h2>
