--- a/CSS Border - Individual Sides.html
+++ b/CSS Border - Individual Sides.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p {
+            border-top-style: dotted;
+            border-right-style: solid;
+            border-bottom-style: dotted;
+            border-left-style: solid;
+        }
+    </style>
 </head>
 <body>
 <h2>Individual Border Sides</h2>
