--- a/Individual Border Side.html
+++ b/Individual Border Side.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Individual Border Sides</h2>
+<p class="four">4 different border styles.</p>
+<p class="three">3 different border styles.</p>
+<p class="two">2 different border styles.</p>
+<p class="one">1 border style.</p>
 
 </body>
 </html>
