--- a/Individual Border Side.html
+++ b/Individual Border Side.html
@@ -3,6 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            text-align: center;
+        }
+        /* Four values */
+        p.four {
+            border-style: dotted solid double dashed;
+        }
+
+        /* Three values */
+        p.three {
+            border-style: dotted solid double;
+        }
+
+        /* Two values */
+        p.two {
+            border-style: dotted solid;
+        }
+
+        /* One value */
+        p.one {
+            border-style: dotted;
+        }
+    </style>
 </head>
 <body>
 <h2>Individual Border Sides</h2>
