--- a/The border Property.html
+++ b/The border Property.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The border Property</h2>
+
+<p>This property is a shorthand property for border-width, border-style, and border-color.</p>
 
 </body>
 </html>
