--- a/The border Property.html
+++ b/The border Property.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p {
+            border: 5px solid red;
+        }
+    </style>
 </head>
 <body>
 <h2>The border Property</h2>
