--- a/Left Border.html
+++ b/Left Border.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h2>The border-left Property</h2>
+<p>This property is a shorthand property for border-left-width, border-left-style, and border-left-color.</p>
 </body>
 </html>
