--- a/Left Border.html
+++ b/Left Border.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p {
+      border-left: 6px solid red;
+      background-color: lightgrey;
+    }
+  </style>
 </head>
 <body>
 <h2>The border-left Property</h2>
