--- a/The border-bottom Property.html
+++ b/The border-bottom Property.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The border-bottom Property</h2>
+<p>This property is a shorthand property for border-bottom-width, border-bottom-style, and border-bottom-color.</p>
 
 </body>
 </html>
