--- a/The border-radius Property.html
+++ b/The border-radius Property.html
@@ -3,6 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.normal {
+      border: 2px solid red;
+      padding: 5px;
+    }
+
+    p.round1 {
+      border: 2px solid red;
+      border-radius: 5px;
+      padding: 5px;
+    }
+
+    p.round2 {
+      border: 2px solid red;
+      border-radius: 8px;
+      padding: 5px;
+    }
+
+    p.round3 {
+      border: 2px solid red;
+      border-radius: 12px;
+      padding: 5px;
+    }
+  </style>
 </head>
 <body>
 <h2>The border-radius Property</h2>
