--- a/CSS Margins.html
+++ b/CSS Margins.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      margin: 70px;
+      border: 1px solid #4CAF50;
+    }
+  </style>
 </head>
 <body>
 <h2>CSS Margins</h2>
