--- a/Using individual margin properties.html
+++ b/Using individual margin properties.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <style>
+    div {
+      border: 1px solid black;
+      margin-top: 100px;
+      margin-bottom: 100px;
+      margin-right: 150px;
+      margin-left: 80px;
+      background-color: lightblue;
+    }
+  </style>
 </head>
 <body>
 <h2>Using individual margin properties</h2>
