--- a/margin shorthand property.html
+++ b/margin shorthand property.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The margin shorthand property - 4 values</h2>
+
+<div>This div element has a top margin of 25px, a right margin of 50px, a bottom margin of 75px, and a left margin of 100px.</div>
 
 </body>
 </html>
