--- a/margin shorthand property  2 values.html
+++ b/margin shorthand property  2 values.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 1px solid black;
+      margin: 25px 50px;
+      background-color: lightblue;
+    }
+  </style>
 </head>
 <body>
 <h2>The margin shorthand property - 2 values</h2>
