--- a/The auto Value.html
+++ b/The auto Value.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      width: 300px;
+      margin: auto;
+      border: 1px solid red;
+    }
+  </style>
 </head>
 <body>
 <h2>Use of margin: auto</h2>
