--- a/Use of the inherit value.html
+++ b/Use of the inherit value.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Use of the inherit value</h2>
+<p>Let the left margin be inherited from the parent element:</p>
 
+<div>
+  <p class="ex1">This paragraph has an inherited left margin (from the div element).</p>
+</div>
 </body>
 </html>
