--- a/Use of the inherit value.html
+++ b/Use of the inherit value.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 1px solid red;
+      margin-left: 100px;
+    }
+
+    p.ex1 {
+      margin-left: inherit;
+    }
+  </style>
 </head>
 <body>
 <h2>Use of the inherit value</h2>
