--- a/CSS Padding.html
+++ b/CSS Padding.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      padding: 70px;
+      border: 1px solid #4CAF50;
+    }
+  </style>
 </head>
 <body>
 <h2>CSS Padding</h2>
