--- a/Using individual padding properties.html
+++ b/Using individual padding properties.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 
+<h2>Using individual padding properties</h2>
+
+<div>This div element has a top padding of 50px, a right padding of 30px, a bottom padding of 50px, and a left padding of 80px.</div>
 </body>
 </html>
