--- a/padding shorthand property.html
+++ b/padding shorthand property.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 1px solid black;
+      padding: 25px 50px 75px 100px;
+      background-color: lightblue;
+    }
+  </style>
 </head>
 <body>
 
