--- a/padding shorthand  3 values.html
+++ b/padding shorthand  3 values.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The padding shorthand property - 3 values</h2>
 
+<div>This div element has a top padding of 25px, a right and left padding of 50px, and a bottom padding of 75px.</div>
 </body>
 </html>
