--- a/padding shorthand  3 values.html
+++ b/padding shorthand  3 values.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 1px solid black;
+      padding: 25px 50px 75px;
+      background-color: lightblue;
+    }
+  </style>
 </head>
 <body>
 <h2>The padding shorthand property - 3 values</h2>
