--- a/Padding and element width.html
+++ b/Padding and element width.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div.ex1 {
+      width: 300px;
+      background-color: yellow;
+    }
+
+    div.ex2 {
+      width: 300px;
+      padding: 25px;
+      background-color: lightblue;
+    }
+  </style>
 </head>
 <body>
 <h2>Padding and element width</h2>
