--- a/Padding and element width - with box-sizing.html
+++ b/Padding and element width - with box-sizing.html
@@ -10,6 +10,6 @@
 <div class="ex1">This div is 300px wide.</div>
 <br>
 
-<div class="ex2">The width of this div remains at 300px, in spite of the 50px of total left and right padding, because of the box-sizing: border-box property.
+<div class="ex2">The width of this div remains at 300px, in spite of the 50px of total left and right padding, because of the box-sizing: border-box property.</div>
 </body>
 </html>
