--- a/Padding and element width - with box-sizing.html
+++ b/Padding and element width - with box-sizing.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div.ex1 {
+            width: 300px;
+            background-color: yellow;
+        }
+
+        div.ex2 {
+            width: 300px;
+            padding: 25px;
+            box-sizing: border-box;
+            background-color: lightblue;
+        }
+    </style>
 </head>
 <body>
 <h2>Padding and element width - with box-sizing</h2>
