--- a/height and width properties.html
+++ b/height and width properties.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 
+<h2>CSS height and width properties</h2>
+
+<div>This div element has a height of 50 pixels and a width of 100%.</div>
+
 </body>
 </html>
