--- a/height and width properties.html
+++ b/height and width properties.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      height: 50px;
+      width: 100%;
+      border: 1px solid #4CAF50;
+    }
+  </style>
 </head>
 <body>
 
