--- a/height and width of an element.html
+++ b/height and width of an element.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Set the height and width of an element</h2>
 
+<div>This div element has a height of 200px and a width of 50%.</div>
 </body>
 </html>
