--- a/Set the height and width of an element.html
+++ b/Set the height and width of an element.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      height: 100px;
+      width: 500px;
+      background-color: powderblue;
+    }
+  </style>
 </head>
 <body>
 <h2>Set the height and width of an element</h2>
