--- a/max-width of an element.html
+++ b/max-width of an element.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            max-width: 500px;
+            height: 100px;
+            background-color: powderblue;
+        }
+    </style>
 </head>
 <body>
 <h2>Set the max-width of an element</h2>
