--- a/Demonstrating the Box Model.html
+++ b/Demonstrating the Box Model.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            background-color: lightgrey;
+            width: 300px;
+            border: 15px solid green;
+            padding: 50px;
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
 <h2>Demonstrating the Box Model</h2>
