--- a/Demonstrating the Box Model.html
+++ b/Demonstrating the Box Model.html
@@ -7,7 +7,7 @@
         div {
             background-color: lightgrey;
             width: 300px;
-            border: 15px solid green;
+            border: 15px solid #1cff1c;
             padding: 50px;
             margin: 20px;
         }
