--- a/Calculate the total width.html
+++ b/Calculate the total width.html
@@ -18,5 +18,10 @@
 <img src="IMAGE" width="350" height="263" alt="Klematis">
 <div>The picture above is 350px wide. The total width of this element is also 350px.</div>
 
+<!--320px (width)
++ 20px (left + right padding)
++ 10px (left + right border)
++ 0px (left + right margin)
+= 350px -->
 </body>
 </html>
