--- a/CSS Outline.html
+++ b/CSS Outline.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h2>CSS Outline</h2>
+<p>This element has a 2px black border and a green outline with a width of 10px.</p>
 </body>
 </html>
