--- a/CSS Outline.html
+++ b/CSS Outline.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p {
+            border: 2px solid black;
+            outline: #4CAF50 solid 10px;
+            margin: auto;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <h2>CSS Outline</h2>
