--- a/outline-width Property.html
+++ b/outline-width Property.html
@@ -3,6 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.ex1 {
+      border: 1px solid black;
+      outline-style: solid;
+      outline-color: red;
+      outline-width: thin;
+    }
+
+    p.ex2 {
+      border: 1px solid black;
+      outline-style: solid;
+      outline-color: red;
+      outline-width: medium;
+    }
+
+    p.ex3 {
+      border: 1px solid black;
+      outline-style: solid;
+      outline-color: red;
+      outline-width: thick;
+    }
+
+    p.ex4 {
+      border: 1px solid black;
+      outline-style: solid;
+      outline-color: red;
+      outline-width: 4px;
+    }
+  </style>
 </head>
 <body>
 <h2>The outline-width Property</h2>
