--- a/Outline Color.html
+++ b/Outline Color.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The outline-color Property</h2>
+<p>The outline-color property is used to set the color of the outline.</p>
+
+<p class="ex1">A solid red outline.</p>
+<p class="ex2">A dotted blue outline.</p>
+<p class="ex3">An outset grey outline.</p>
 
 </body>
 </html>
