--- a/Outline Color.html
+++ b/Outline Color.html
@@ -3,6 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.ex1 {
+      border: 2px solid black;
+      outline-style: solid;
+      outline-color: red;
+    }
+
+    p.ex2 {
+      border: 2px solid black;
+      outline-style: dotted;
+      outline-color: blue;
+    }
+
+    p.ex3 {
+      border: 2px solid black;
+      outline-style: outset;
+      outline-color: grey;
+    }
+  </style>
 </head>
 <body>
 <h2>The outline-color Property</h2>
