--- a/Outline Shorthand.html
+++ b/Outline Shorthand.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The outline Property</h2>
 
+<p class="ex1">A dashed outline.</p>
+<p class="ex2">A dotted red outline.</p>
+<p class="ex3">A 5px solid yellow outline.</p>
+<p class="ex4">A thick ridge pink outline.</p>
 </body>
 </html>
