--- a/Outline Shorthand.html
+++ b/Outline Shorthand.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p.ex1 {outline: dashed;}
+        p.ex2 {outline: dotted red;}
+        p.ex3 {outline: 5px solid yellow;}
+        p.ex4 {outline: thick ridge pink;}
+    </style>
 </head>
 <body>
 <h2>The outline Property</h2>
