--- a/Outline Offset.html
+++ b/Outline Offset.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p {
+      margin: 30px;
+      border: 1px solid black;
+      outline: 1px solid red;
+      outline-offset: 10px;
+    }
+  </style>
 </head>
 <body>
 <h2>The outline-offset Property</h2>
