--- a/outline-offset Property.html
+++ b/outline-offset Property.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The outline-offset Property</h2>
 
+<p>This paragraph has an outline of 15px outside the border edge.</p>
 </body>
 </html>
