--- a/TEXT FORMATTING.html
+++ b/TEXT FORMATTING.html
@@ -3,6 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 1px solid gray;
+      padding: 8px;
+    }
+
+    h1 {
+      text-align: center;
+      text-transform: uppercase;
+      color: #4CAF50;
+    }
+
+    p {
+      text-indent: 50px;
+      text-align: justify;
+      letter-spacing: 3px;
+    }
+
+    a {
+      text-decoration: none;
+      color: #008CBA;
+    }
+  </style>
 </head>
 <body>
 <div>
