--- a/Text Color.html
+++ b/Text Color.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      color: blue;
+    }
+
+    h1 {
+      color: green;
+    }
+  </style>
 </head>
 <body>
 <h1>This is heading 1</h1>
