--- a/Text  and Background Color.html
+++ b/Text  and Background Color.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>This is a Heading</h1>
+<p>This page has a grey background color and a blue text.</p>
+<div>This is a div.</div>
 
 </body>
 </html>
