--- a/Text  and Background Color.html
+++ b/Text  and Background Color.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      background-color: lightgrey;
+      color: blue;
+    }
+
+    h1 {
+      background-color: black;
+      color: white;
+    }
+
+    div {
+      background-color: blue;
+      color: white;
+    }
+  </style>
 </head>
 <body>
 <h1>This is a Heading</h1>
