--- a/Text Alignment.html
+++ b/Text Alignment.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Heading 1 (center)</h1>
+<h2>Heading 2 (left)</h2>
+<h3>Heading 3 (right)</h3>
 
+<p>The three headings above are aligned center, left and right.</p>
 </body>
 </html>
