--- a/Text Alignment.html
+++ b/Text Alignment.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1 {
+      text-align: center;
+    }
+
+    h2 {
+      text-align: left;
+    }
+
+    h3 {
+      text-align: right;
+    }
+  </style>
 </head>
 <body>
 <h1>Heading 1 (center)</h1>
