--- a/text-align justify.html
+++ b/text-align justify.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 1px solid black;
+      padding: 10px;
+      width: 200px;
+      height: 200px;
+      text-align: justify;
+    }
+  </style>
 </head>
 <body>
 
