--- a/Text Direction.html
+++ b/Text Direction.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<p>This is the default text direction.</p>
 
+<p class="ex1">This is right-to-left text direction.</p>
 </body>
 </html>
