--- a/Text Direction.html
+++ b/Text Direction.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p.ex1 {
+            direction: rtl;
+            unicode-bidi: bidi-override;
+        }
+    </style>
 </head>
 <body>
 <p>This is the default text direction.</p>
