--- a/vertical-align Property.html
+++ b/vertical-align Property.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+<h1>The vertical-align Property</h1>
 
+<h2>vertical-align: baseline (default):</h2>
+<p>An <img class="a" src="sqpurple.gif" width="9" height="9"> image with a default alignment.</p>
+
+<h2>vertical-align: text-top:</h2>
+<p>An <img class="b" src="sqpurple.gif" width="9" height="9"> image with a text-top alignment.</p>
+
+<h2>vertical-align: text-bottom:</h2>
+<p>An <img class="c" src="sqpurple.gif" width="9" height="9"> image with a text-bottom alignment.</p>
+
+<h2>vertical-align: sub:</h2>
+<p>An <img class="d" src="sqpurple.gif" width="9" height="9"> image with a sub alignment.</p>
+
+<h2>vertical-align: sup:</h2>
+<p>An <img class="e" src="sqpurple.gif" width="9" height="9"> image with a super alignment.</p>
 </body>
 </html>
