--- a/vertical-align Property.html
+++ b/vertical-align Property.html
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    img.a {
+      vertical-align: baseline;
+    }
+
+    img.b {
+      vertical-align: text-top;
+    }
+
+    img.c {
+      vertical-align: text-bottom;
+    }
+
+    img.d {
+      vertical-align: sub;
+    }
+
+    img.e {
+      vertical-align: super;
+    }
+  </style>
 </head>
 <body>
 <h1>The vertical-align Property</h1>
