--- a/text-decoration none.html
+++ b/text-decoration none.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Using text-decoration: none</h1>
+
+<p>A link with no underline: <a href="https://www.w3schools.com">W3Schools.com</a></p>
 
 </body>
 </html>
