--- a/text-decoration none.html
+++ b/text-decoration none.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    a {
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
 <h1>Using text-decoration: none</h1>
