--- a/different text decorations.html
+++ b/different text decorations.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Some different text decorations</h1>
 
+<h2>Overline text decoration</h2>
+<h3>Line-through text decoration</h3>
+<h4>Underline text decoration</h4>
+
+<p><strong>Note:</strong> It is not recommended to underline text that is not a link, as this often confuses
+  the reader.</p>
 </body>
 </html>
