--- a/different text decorations.html
+++ b/different text decorations.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h2 {
+      text-decoration: overline;
+    }
+
+    h3 {
+      text-decoration: line-through;
+    }
+
+    h4 {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 <h1>Some different text decorations</h1>
