--- a/text-transform property.html
+++ b/text-transform property.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Using the text-transform property</h1>
 
+<p class="uppercase">This text is transformed to uppercase.</p>
+<p class="lowercase">This text is transformed to lowercase.</p>
+<p class="capitalize">This text is capitalized.</p>
 </body>
 </html>
