--- a/text-transform property.html
+++ b/text-transform property.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.uppercase {
+      text-transform: uppercase;
+    }
+
+    p.lowercase {
+      text-transform: lowercase;
+    }
+
+    p.capitalize {
+      text-transform: capitalize;
+    }
+  </style>
 </head>
 <body>
 <h1>Using the text-transform property</h1>
