--- a/Using text-indent.html
+++ b/Using text-indent.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p {
+            text-indent: 50px;
+        }
+    </style>
 </head>
 <body>
 <h1>Using text-indent</h1>
