--- a/Using letter-spacing.html
+++ b/Using letter-spacing.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h2 {
+      letter-spacing: 5px;
+    }
+
+    h3 {
+      letter-spacing: -2px;
+    }
+  </style>
 </head>
 <body>
 
