--- a/Using line-height.html
+++ b/Using line-height.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Using line-height</h1>
 
+<p>
+  This is a paragraph with a standard line-height.<br>
+  The default line height in most browsers is about 110% to 120%.<br>
+</p>
+
+<p class="small">
+  This is a paragraph with a smaller line-height.<br>
+  This is a paragraph with a smaller line-height.<br>
+</p>
+
+<p class="big">
+  This is a paragraph with a bigger line-height.<br>
+  This is a paragraph with a bigger line-height.<br>
+</p>
 </body>
 </html>
