--- a/Using line-height.html
+++ b/Using line-height.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.small {
+      line-height: 0.7;
+    }
+
+    p.big {
+      line-height: 1.8;
+    }
+  </style>
 </head>
 <body>
 <h1>Using line-height</h1>
