--- a/Word Spacing.html
+++ b/Word Spacing.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Using word-spacing</h1>
 
+<p>This is a paragraph with normal word spacing.</p>
+
+<p class="one">This is a paragraph with larger word spacing.</p>
+
+<p class="two">This is a paragraph with smaller word spacing.</p>
 </body>
 </html>
