--- a/Word Spacing.html
+++ b/Word Spacing.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.one {
+      word-spacing: 10px;
+    }
+
+    p.two {
+      word-spacing: -2px;
+    }
+  </style>
 </head>
 <body>
 <h1>Using word-spacing</h1>
