--- a/Using white-space.html
+++ b/Using white-space.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Using white-space</h1>
+
+<p>
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+  This is some text that will not wrap.
+</p>
+
+<p>Try to remove the white-space property to see the difference!</p>
 
 </body>
 </html>
