--- a/Using white-space.html
+++ b/Using white-space.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p {
+      white-space: nowrap;
+    }
+  </style>
 </head>
 <body>
 <h1>Using white-space</h1>
