--- a/text shadow color.html
+++ b/text shadow color.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1 {
+      text-shadow: 2px 2px red;
+    }
+  </style>
 </head>
 <body>
 
