--- a/text-shadow blur.html
+++ b/text-shadow blur.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1 {
+      text-shadow: 2px 2px 5px red;
+    }
+  </style>
 </head>
 <body>
 <h1>Text-shadow effect!</h1>
