--- a/Text Shadow Example 1.html
+++ b/Text Shadow Example 1.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1 {
+      color: white;
+      text-shadow: 2px 2px 4px #000000;
+    }
+  </style>
 </head>
 <body>
 <h1>Text-shadow effect!</h1>
