--- a/Text-shadow with red and blue neon glow.html
+++ b/Text-shadow with red and blue neon glow.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1 {
+      text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+    }
+  </style>
 </head>
 <body>
 
