--- a/CSS Fallback Fonts.html
+++ b/CSS Fallback Fonts.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p {
+      font-family: Tahoma, Verdana, sans-serif;
+    }
+  </style>
 </head>
 <body>
 <h1>CSS Fallback Fonts</h1>
