--- a/The font-style property.html
+++ b/The font-style property.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>The font-style property</h1>
 
+<p class="normal">This is a paragraph in normal style.</p>
+<p class="italic">This is a paragraph in italic style.</p>
+<p class="oblique">This is a paragraph in oblique style.</p>
 </body>
 </html>
