--- a/The font-style property.html
+++ b/The font-style property.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.normal {
+      font-style: normal;
+    }
+
+    p.italic {
+      font-style: italic;
+    }
+
+    p.oblique {
+      font-style: oblique;
+    }
+  </style>
 </head>
 <body>
 <h1>The font-style property</h1>
