--- a/The font-weight property.html
+++ b/The font-weight property.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<h1>The font-weight property</h1>
 
+<p class="normal">This is a paragraph.</p>
+<p class="light">This is a paragraph.</p>
+<p class="thick">This is a paragraph.</p>
+<p class="thicker">This is a paragraph.</p>
 </body>
 </html>
