--- a/The font-weight property.html
+++ b/The font-weight property.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <h1>The font-weight property</h1>
+
+  <p class="normal">This is a paragraph.</p>
+  <p class="light">This is a paragraph.</p>
+  <p class="thick">This is a paragraph.</p>
+  <p class="thicker">This is a paragraph.</p>
 </head>
 <body>
 <h1>The font-weight property</h1>
