--- a/The font-weight property.html
+++ b/The font-weight property.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <h1>The font-weight property</h1>
+  <style>
+    p.normal {
+      font-weight: normal;
+    }
 
-  <p class="normal">This is a paragraph.</p>
-  <p class="light">This is a paragraph.</p>
-  <p class="thick">This is a paragraph.</p>
-  <p class="thicker">This is a paragraph.</p>
+    p.light {
+      font-weight: lighter;
+    }
+
+    p.thick {
+      font-weight: bold;
+    }
+
+    p.thicker {
+      font-weight: 900;
+    }
+  </style>
 </head>
 <body>
 <h1>The font-weight property</h1>
