--- a/The font-variant property.html
+++ b/The font-variant property.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>The font-variant property</h1>
+
+<p class="normal">My name is Hege Refsnes.</p>
+<p class="small">My name is Hege Refsnes.</p>
 
 </body>
 </html>
