--- a/The font-variant property.html
+++ b/The font-variant property.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.normal {
+      font-variant: normal;
+    }
+
+    p.small {
+      font-variant: small-caps;
+    }
+  </style>
 </head>
 <body>
 <h1>The font-variant property</h1>
