--- a/Font Size With Pixels.html
+++ b/Font Size With Pixels.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h1 {
+            font-size: 40px;
+        }
+
+        h2 {
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
 <h1>This is heading 1</h1>
