--- a/Font Size With Em.html
+++ b/Font Size With Em.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1 {
+      font-size: 2.5em; /* 40px/16=2.5em */
+    }
+
+    h2 {
+      font-size: 1.875em; /* 30px/16=1.875em */
+    }
+
+    p {
+      font-size: 0.875em; /* 14px/16=0.875em */
+    }
+  </style>
 </head>
 <body>
 <h1>This is heading 1</h1>
