--- a/Combination of Percent and Em.html
+++ b/Combination of Percent and Em.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>This is heading 1</h1>
+<h2>This is heading 2</h2>
+<p>This is a paragraph.</p>
+<p>Specifying the font-size in percent and em displays the same size in all major browsers, and allows all browsers to resize the text!</p>
 </body>
 </html>
