--- a/Combination of Percent and Em.html
+++ b/Combination of Percent and Em.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    body {
+      font-size: 100%;
+    }
+
+    h1 {
+      font-size: 2.5em;
+    }
+
+    h2 {
+      font-size: 1.875em;
+    }
+
+    p {
+      font-size: 0.875em;
+    }
+  </style>
 </head>
 <body>
 <h1>This is heading 1</h1>
