--- a/Use Google Fonts.html
+++ b/Use Google Fonts.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Sofia Font</h1>
+<p>Lorem ipsum dolor sit amet.</p>
+<p>123456790</p>
 </body>
 </html>
