--- a/Use Multiple Google Fonts.html
+++ b/Use Multiple Google Fonts.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1 class="a">Audiowide Font</h1>
 
+<h1 class="b">Sofia Font</h1>
+
+<h1 class="c">Trirong Font</h1>
 </body>
 </html>
