--- a/Use Multiple Google Fonts.html
+++ b/Use Multiple Google Fonts.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+  <style>
+    h1.a {
+      font-family: "Audiowide", sans-serif;
+    }
+
+    h1.b {
+      font-family: "Sofia", sans-serif;
+    }
+
+    h1.c {
+      font-family: "Trirong", serif;
+    }
+  </style>
 </head>
 <body>
 <h1 class="a">Audiowide Font</h1>
