--- a/Enabling Font Effects.html
+++ b/Enabling Font Effects.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<!--Google have also enabled different font effects that you can use.
+
+First add effect=effectname to the Google API, then add a special class name to the element that is going to use the special effect. The class name always starts with font-effect- and ends with the effectname. -->
 
 </body>
 </html>
