--- a/Enabling Font Effects.html
+++ b/Enabling Font Effects.html
@@ -9,5 +9,9 @@
 
 First add effect=effectname to the Google API, then add a special class name to the element that is going to use the special effect. The class name always starts with font-effect- and ends with the effectname. -->
 
+<h1 class="font-effect-fire">Sofia on Fire</h1>
+<p class="font-effect-fire">Lorem ipsum dolor sit amet.</p>
+<p class="font-effect-fire">123456790</p>
+
 </body>
 </html>
