--- a/Enabling Font Effects.html
+++ b/Enabling Font Effects.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
+    <style>
+        body {
+            font-family: "Sofia", sans-serif;
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body>
 <!--Google have also enabled different font effects that you can use.
