--- a/multiple font effects.html
+++ b/multiple font effects.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1 class="font-effect-neon">Neon Effect</h1>
+<h1 class="font-effect-outline">Outline Effect</h1>
+<h1 class="font-effect-emboss">Emboss Effect</h1>
+<h1 class="font-effect-shadow-multiple">Multiple Shadow Effect</h1>
 </body>
 </html>
