--- a/multiple font effects.html
+++ b/multiple font effects.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+  <style>
+    body {
+      font-family: "Sofia", sans-serif;
+      font-size: 30px;
+    }
+  </style>
 </head>
 <body>
 <h1 class="font-effect-neon">Neon Effect</h1>
