--- a/The font Property.html
+++ b/The font Property.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>The font Property</h1>
 
+<p class="a">This is a paragraph. The font size is set to 20 pixels, and the font family is Arial.</p>
+
+<p class="b">This is a paragraph. The font is set to italic and bold, the font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
 </body>
 </html>
