--- a/The font Property.html
+++ b/The font Property.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.a {
+      font: 20px Arial, sans-serif;
+    }
+
+    p.b {
+      font: italic bold 12px/30px Georgia, serif;
+    }
+  </style>
 </head>
 <body>
 <h1>The font Property</h1>
