--- a/Font Awesome icon library.html
+++ b/Font Awesome icon library.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <script src="https://kit.fontawesome.com/44b1b20e3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
