--- a/Style a link with a color.html
+++ b/Style a link with a color.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    a {
+      color: hotpink;
+    }
+  </style>
 </head>
 <body>
 <h2>Style a link with a color</h2>
