--- a/Styling a link with text-decoration property.html
+++ b/Styling a link with text-decoration property.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    a:link {
+      text-decoration: none;
+    }
+
+    a:visited {
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    a:active {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 <h2>Styling a link with text-decoration property</h2>
