--- a/Link Buttons.html
+++ b/Link Buttons.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Link Button</h2>
 
+<p>A link styled as a button:</p>
+<a href="default.asp" target="_blank">This is a link</a>
 </body>
 </html>
