--- a/list-style-image Property.html
+++ b/list-style-image Property.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+<h2>The list-style-image Property</h2>
 
+<p>The list-style-image property specifies an image as the list item marker:</p>
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Coca Cola</li>
+</ul>
 </body>
 </html>
