--- a/Remove Default Settings of list.html
+++ b/Remove Default Settings of list.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<p>Default list:</p>
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Coca Cola</li>
+</ul>
 
+<p>Remove bullets, margin and padding from list:</p>
+<ul class="demo">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Coca Cola</li>
+</ul>
 </body>
 </html>
