--- a/block elements.html
+++ b/block elements.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<span>A display property with</span>
+<span>a value of "block" results in</span>
+<span>a line break between each span elements.</span>
 </body>
 </html>
