--- a/Display links as block elements.html
+++ b/Display links as block elements.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Display links as block elements</h1>
 <a href="/html/default.asp" target="_blank">HTML</a>
 <a href="/css/default.asp" target="_blank">CSS</a>
 <a href="/js/default.asp" target="_blank">JavaScript</a>
