--- a/position static.html
+++ b/position static.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div.static {
+      position: static;
+      border: 3px solid #73AD21;
+    }
+  </style>
 </head>
 <body>
 
