--- a/position absolute.html
+++ b/position absolute.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h2>position: absolute;</h2>
+<p>An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed):</p>
+
 </body>
 </html>
