--- a/position absolute.html
+++ b/position absolute.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div.relative {
+      position: relative;
+      width: 400px;
+      height: 200px;
+      border: 3px solid #73AD21;
+    }
+
+  </style>
 </head>
 <body>
 <h2>position: absolute;</h2>
 <p>An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed):</p>
+<div class="relative">This div element has position: relative;
 
+</div>
 </body>
 </html>
