--- a/position sticky.html
+++ b/position sticky.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<p>Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
 
 </body>
 </html>
