--- a/position sticky.html
+++ b/position sticky.html
@@ -7,5 +7,6 @@
 <body>
 <p>Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
 
+<div class="sticky">I am sticky!</div>
 </body>
 </html>
