--- a/position sticky.html
+++ b/position sticky.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div.sticky {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            padding: 5px;
+            background-color: #cae8ca;
+            border: 2px solid #4CAF50;
+        }
+    </style>
 </head>
 <body>
 <p>Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
