--- a/position sticky.html
+++ b/position sticky.html
@@ -15,8 +15,10 @@
     </style>
 </head>
 <body>
-<p>Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
+<p style="height: 1000px">Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
 
 <div class="sticky">I am sticky!</div>
+
+<p style="height: 1000px">Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
 </body>
 </html>
