--- a/Image Text Top Left.html
+++ b/Image Text Top Left.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<div class="container">
+    <img src="IMAGE/city.jpg" alt="Cinque Terre" width="1000" height="300">
+</div>
 </body>
 </html>
