--- a/Image Text Top Left.html
+++ b/Image Text Top Left.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Image Text</h2>
+<p>Add some text to an image in the top left corner:</p>
+
 <div class="container">
     <img src="IMAGE/city.jpg" alt="Cinque Terre" width="1000" height="300">
 </div>
