--- a/Image Text Top Left.html
+++ b/Image Text Top Left.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .container {
+            position: relative;
+        }
+    </style>
 </head>
 <body>
 <h2>Image Text</h2>
@@ -10,6 +15,7 @@
 
 <div class="container">
     <img src="IMAGE/city.jpg" alt="Cinque Terre" width="1000" height="300">
+    <div class="topleft">Top Left</div>
 </div>
 </body>
 </html>
