--- a/z-index Property.html
+++ b/z-index Property.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        img {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            z-index: -1;
+        }
+    </style>
 </head>
 <body>
 
