--- a/Overflow auto.html
+++ b/Overflow auto.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            background-color: #eee;
+            width: 200px;
+            height: 50px;
+            border: 1px dotted black;
+            overflow: auto;
+        }
+    </style>
 </head>
 <body>
 <h2>Overflow: auto</h2>
