--- a/Overflow-x and overflow-y.html
+++ b/Overflow-x and overflow-y.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            background-color: #eee;
+            width: 200px;
+            height: 50px;
+            border: 1px dotted black;
+            overflow-x:scroll;
+            overflow-y: scroll;
+        }
+    </style>
 </head>
 <body>
 <h2>Overflow-x and overflow-y</h2>
