--- a/float right.html
+++ b/float right.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Float Right</h2>
 
+<p>In this example, the image will float to the right in the paragraph, and the text in the paragraph will wrap around the image.</p>
 </body>
 </html>
