--- a/Float None.html
+++ b/Float None.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Float None</h2>
+
+<p>In this example, the image will be displayed just where it occurs in the text (float: none;).</p>
 
 </body>
 </html>
