--- a/Float Next To Each Other.html
+++ b/Float Next To Each Other.html
@@ -11,17 +11,20 @@
 
         .div1 {
             background: red;
-
+            height: 100px;
+            width: 33.33%;
         }
 
         .div2 {
             background: yellow;
-
+            height: 100px;
+            width: 33.33%;
         }
 
         .div3 {
             background: green;
-
+            height: 100px;
+            width: 33.33%;
         }
     </style>
 </head>
