--- a/Without clear.html
+++ b/Without clear.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<h2>Without clear</h2>
+<div class="div1">div1</div>
+<div class="div2">div2 - Notice that div2 is after div1 in the HTML code. However, since div1 floats to the left, the text in div2 flows around div1.</div>
 </body>
 </html>
