--- a/With clear.html
+++ b/With clear.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
+    .div3 {
+      float: left;
+      padding: 10px;
+      border: 3px solid #73AD21;
+    }
 
+    .div4 {
+      padding: 10px;
+      border: 3px solid red;
+      clear: left;
+    }
   </style>
 </head>
 <body>
