--- a/Without Clearfix.html
+++ b/Without Clearfix.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Without Clearfix</h2>
 
+<p>This image is floated to the right. It is also taller than the element containing it, so it overflows outside of its container:</p>
 </body>
 </html>
