--- a/With Clearfix.html
+++ b/With Clearfix.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 
+
+<h2 style="clear:right">With Clearfix</h2>
+<p>We can fix this by adding a clearfix class with overflow: auto; to the containing element:</p>
+
+<div class="clearfix">
+    <img class="img2" src="IMAGE/repeat.jpg" alt="Pineapple" width="170" height="170">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+</div>
+
+
+
+
 </body>
 </html>
