--- a/With Clearfix.html
+++ b/With Clearfix.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            border: 3px solid #4CAF50;
+            padding: 5px;
+        }
+        .img2 {
+            float: right;
+        }
+
+        .clearfix {
+            overflow: auto;
+        }
+    </style>
 </head>
 <body>
 
@@ -14,8 +27,6 @@
     <img class="img2" src="IMAGE/repeat.jpg" alt="Pineapple" width="170" height="170">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
 </div>
-
-
 
 
 </body>
