--- a/With New Modern Clearfix.html
+++ b/With New Modern Clearfix.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2 style="clear:right">With New Modern Clearfix</h2>
+<p>Add the clearfix hack to the containing element, to fix this problem:</p>
 
+<div class="clearfix">
+  <img class="img2" src="IMAGE/repeat.jpg" alt="Pineapple" width="170" height="170">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+</div>
 </body>
 </html>
