--- a/With New Modern Clearfix.html
+++ b/With New Modern Clearfix.html
@@ -3,6 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      border: 3px solid #4CAF50;
+      padding: 5px;
+    }
+    .img2 {
+      float: right;
+    }
+
+    .clearfix::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+  </style>
 </head>
 <body>
 <h2 style="clear:right">With New Modern Clearfix</h2>
