--- a/Grid of Boxes.html
+++ b/Grid of Boxes.html
@@ -7,5 +7,17 @@
 <body>
 <h2>Grid of Boxes</h2>
 <p>Float boxes side by side:</p>
+<div class="clearfix">
+  <div class="box" style="background-color:#bbb">
+    <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ccc">
+    <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ddd">
+    <p>Some text inside the box.</p>
+  </div>
+</div>
+
 </body>
 </html>
