--- a/Images Side by Side.html
+++ b/Images Side by Side.html
@@ -5,8 +5,19 @@
     <title>Title</title>
 </head>
 <body>
+
 <h2>Images Side by Side</h2>
 <p>Float images side by side:</p>
+<div class="clearfix">
+
+  <div class="img-container">
+    <img src="IMAGE/repeat.jpg" alt="Italy" style="width:100%">
+  </div>
+
+
+
+</div>
+
 
 </body>
 </html>
