--- a/Images Side by Side.html
+++ b/Images Side by Side.html
@@ -13,8 +13,12 @@
   <div class="img-container">
     <img src="IMAGE/repeat.jpg" alt="Italy" style="width:100%">
   </div>
-
-
+  <div class="img-container">
+    <img src="IMAGE/repeat.jpg" alt="Italy" style="width:100%">
+  </div>
+  <div class="img-container">
+    <img src="IMAGE/repeat.jpg" alt="Italy" style="width:100%">
+  </div>
 
 </div>
 
