--- a/Navigation Menu.html
+++ b/Navigation Menu.html
@@ -27,7 +27,9 @@
       border-bottom:1px solid red ;
       border-top:1px solid red ;
     }
-
+    .active {
+      background-color: red;
+    }
   </style>
 </head>
 <body>
