--- a/Web Layout.html
+++ b/Web Layout.html
@@ -7,6 +7,11 @@
     * {
       box-sizing: border-box;
     }
+    .header, .footer {
+      background-color: grey;
+      color: white;
+      padding: 15px;
+    }
 
   </style>
 </head>
