--- a/Web Layout.html
+++ b/Web Layout.html
@@ -24,6 +24,12 @@
     .content {
       width: 75%;
     }
+    .menu ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
   </style>
 </head>
 <body>
