--- a/Web Layout.html
+++ b/Web Layout.html
@@ -35,6 +35,10 @@
       background-color: #33b5e5;
       color: #ffffff;
     }
+    .menu li:hover {
+      background-color: #0099cc;
+    }
+
   </style>
 </head>
 <body>
