--- a/display inline-block Value.html
+++ b/display inline-block Value.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <span class="a">Hello bangladesh</span>
+<span class="b">Hello bangladesh</span>
+<span class="c">Hello bangladesh</span>
 </body>
 </html>
