--- a/display inline-block Value.html
+++ b/display inline-block Value.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    span.a {
+      display: inline; /* the default for span */
+      width: 100px;
+      height: 100px;
+      padding: 5px;
+      border: 1px solid blue;
+      background-color: yellow;
+    }
+  </style>
 </head>
 <body>
 <span class="a">Hello bangladesh</span>
