--- a/Using inline-block to Create Navigation Links.html
+++ b/Using inline-block to Create Navigation Links.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-
+<nav>
+  <ul>
+    <li> Home </li>
+    <li> Draw </li>
+    <li> three </li>
+    <li> Home </li>
+    <li> Contact </li>
+  </ul>
+</nav>
 </body>
 </html>
