--- a/Using inline-block to Create Navigation Links.html
+++ b/Using inline-block to Create Navigation Links.html
@@ -16,7 +16,6 @@
       font-size: 20px;
       padding: 20px;
     }
-
   </style>
 </head>
 <body>
@@ -26,6 +25,7 @@
     <li> Draw </li>
     <li> three </li>
     <li> Home </li>
+    <li> Contact </li>
     <li> Contact </li>
   </ul>
 </nav>
