--- a/Center Align Elements.html
+++ b/Center Align Elements.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+
+<h2>Center Align Elements</h2>
+<p>To horizontally center a block element (like div), use margin: auto;</p>
+
 <div class="center">
     <p>Hello World!</p>
 </div>
