--- a/Center Align Text.html
+++ b/Center Align Text.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .center {
+            text-align: center;
+            border: 3px solid green;
+        }
+    </style>
 </head>
 <body>
 <h2>Center Text</h2>
