--- a/Center an Image.html
+++ b/Center an Image.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Center an Image</h2>
+<p>To center an image, set left and right margin to auto, and make it into a block element.</p>
+
+<img src="IMAGE/repeat.jpg" alt="Paris" style="width:40%">
 
 </body>
 </html>
