--- a/Center vertically with padding.html
+++ b/Center vertically with padding.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Center vertically with padding</h2>
 
+<p>In this example, we use the padding property to center the div element vertically:</p>
+
+<div class="center">
+  <p>I am vertically centered.</p>
+</div>
 </body>
 </html>
