--- a/Center with line-height.html
+++ b/Center with line-height.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Center with line-height</h2>
 
+<p>In this example, we use the line-height property with a value that is equal to the height property to center the div element:</p>
+
+<div class="center">
+  <p>I am vertically and horizontally centered.</p>
+</div>
 </body>
 </html>
