--- a/Center with position and transform.html
+++ b/Center with position and transform.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    .center {
+      height: 200px;
+      position: relative;
+      border: 3px solid green;
+    }
+
+  </style>
 </head>
 <body>
 <h2>Center with position and transform</h2>
