--- a/Hover on div.html
+++ b/Hover on div.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 
+<p>Mouse over the div element below to change its background color:</p>
+
+<div>Mouse Over Me</div>
 </body>
 </html>
