--- a/Simple Tooltip Hover.html
+++ b/Simple Tooltip Hover.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<div>Hover over this div element to show the p element
+    <p>Tada! Here I am!</p>
+</div>
 </body>
 </html>
