--- a/Simple Tooltip Hover.html
+++ b/Simple Tooltip Hover.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p {
+            display: none;
+            background-color: yellow;
+            padding: 20px;
+        }
+
+        div:hover p {
+            display: block;
+        }
+    </style>
 </head>
 <body>
 <div>Hover over this div element to show the p element
