--- a/first-child Pseudo-class.html
+++ b/first-child Pseudo-class.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<div>
+    <p>This is some text.</p>
+    <p>This is some text.</p>
+</div>
 </body>
 </html>
