--- a/first-letter Pseudo-element.html
+++ b/first-letter Pseudo-element.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>You can use the ::first-letter pseudo-element to add a special effect to the first character of a text!</p>
 </body>
 </html>
