--- a/first-letter Pseudo-element.html
+++ b/first-letter Pseudo-element.html
@@ -6,7 +6,7 @@
   <style>
     p::first-letter {
       color: #ff0000;
-      font-size: xx-large;
+      font-size: 100px;
     }
   </style>
 </head>
