--- a/Multiple Pseudo-elements.html
+++ b/Multiple Pseudo-elements.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>You can combine the ::first-letter and ::first-line pseudo-elements to add a special effect to the first letter and the first line of a text!</p>
 </body>
 </html>
