--- a/selection Pseudo-element.html
+++ b/selection Pseudo-element.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Select some text on this page:</h1>
 
+<p>This is a paragraph.</p>
+<div>This is some text in a div element.</div>
 </body>
 </html>
