--- a/Text in Transparent Box.html
+++ b/Text in Transparent Box.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div.background {
+      background: url(IMAGE/city.jpg) repeat;
+      border: 2px solid black;
+    }
+
+  </style>
 </head>
 <body>
 
