--- a/Text in Transparent Box.html
+++ b/Text in Transparent Box.html
@@ -5,10 +5,15 @@
     <title>Title</title>
   <style>
     div.background {
-      background: url(IMAGE/city.jpg) repeat;
+      background: url(IMAGE/city.jpg) no-repeat ;
       border: 2px solid black;
     }
-
+    div.transbox {
+      margin: 30px;
+      background-color: #ffffff;
+      border: 1px solid black;
+      opacity: 0.6;
+    }
   </style>
 </head>
 <body>
