--- a/Vertical Navigation Bar 3.html
+++ b/Vertical Navigation Bar 3.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #f1f1f1;
+    }
+
+  </style>
 </head>
 <body>
 <h2>Vertical Navigation Bar</h2>
