--- a/Center Links & Add Borders.html
+++ b/Center Links & Add Borders.html
@@ -25,6 +25,11 @@
     li:last-child {
         border-bottom: none;
     }
+    li a.active {
+        background-color: #04AA6D;
+        color: white;
+    }
+
   </style>
 </head>
 <body>
