--- a/Full-height Fixed Vertical Navbar.html
+++ b/Full-height Fixed Vertical Navbar.html
@@ -27,6 +27,10 @@
             background-color: #04AA6D;
             color: white;
         }
+        li a:hover:not(.active) {
+            background-color: #555;
+            color: white;
+        }
     </style>
 </head>
 <body>
