--- a/Floating List Items.html
+++ b/Floating List Items.html
@@ -17,6 +17,7 @@
             display: block;
             padding: 8px;
             background-color: #dddddd;
+            text-decoration: none;
         }
     </style>
 </head>
