--- a/Floating List Items.html
+++ b/Floating List Items.html
@@ -18,6 +18,7 @@
             padding: 8px;
             background-color: #dddddd;
             text-decoration: none;
+            color: black;
         }
     </style>
 </head>
