--- a/Floating List Items 2.html
+++ b/Floating List Items 2.html
@@ -17,6 +17,8 @@
       display: block;
       padding: 8px;
       background-color: #dddddd;
+      list-style-type: none;
+      color:black;
     }
   </style>
 </head>
