--- a/Floating List Items 2.html
+++ b/Floating List Items 2.html
@@ -17,7 +17,7 @@
       display: block;
       padding: 8px;
       background-color: #dddddd;
-      list-style-type: none;
+     text-decoration: none;
       color:black;
     }
   </style>
